force-app/main/default/objects/JBCXM__DashboardComponent__c/JBCXM__DashboardComponent__c.object-meta.xml
<CustomObject>
    <label>DashboardComponent</label>
    <nameField>
        <label>DashboardComponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardComponents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>