force-app/main/default/objects/JBCXM__DashboardComponent__c/fields/JBCXM__Categories__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Categories__c</fullName>
    <label>Categories</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>