force-app/main/default/objects/JBCXM__DashboardComponent__c/fields/JBCXM__DataSeries__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DataSeries__c</fullName>
    <label>DataSeries</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>