force-app/main/default/objects/JBCXM__DashboardComponent__c/fields/JBCXM__DrillDownColumnList__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DrillDownColumnList__c</fullName>
    <description>This is used to store the list of columns to show on drill down.</description>
    <label>Drill Down Column List</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>