force-app/main/default/objects/JBCXM__DashboardComponent__c/fields/JBCXM__FilterConditions__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FilterConditions__c</fullName>
    <label>FilterConditions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>